syntax = "proto3";

package sonrio.sonr.bucket;

option go_package = "github.com/sonr-io/sonr/x/bucket/types";
option java_multiple_files = true;
option java_package = "io.sonr.types.bucket";

message WhereIs {
  // DID of the created bucket.
  string uuid = 1;

  // Creator of the new bucket
  string creator = 2;

  // Name of the new bucket.
  string name = 3;

  // Visibility of the new bucket.
  BucketVisibility visibility = 4;

  // IsActive flag of the new bucket.
  bool is_active = 6;

  // Timestamp of the new bucket.
  int64 size = 9;
}


// BucketVisibility is the visibility of the bucket to authorized users of an application
enum BucketVisibility {
  // Bucket does not have visibility set.
  PUBLIC = 0;

  // Bucket is visible to anyone.
  USER = 1;

  // Bucket is visible to anyone who has access token.
  APPLICATION = 2;
}
